rename service-config package, rename sso module to service-sso

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,8 @@
 	<modules>
         <module>api-author</module>
         <module>service-config</module>
-        <module>sso</module>
+        <module>service-registry</module>
+        <module>service-sso</module>
 	</modules>
 
 	<properties>
