fixing sso module name

--- a/service-sso/src/main/resources/bootstrap.yml
+++ b/service-sso/src/main/resources/bootstrap.yml
@@ -1,10 +1,9 @@
 spring:
   application:
-    name: sso
+    name: service-sso
   cloud:
     config:
       uri: http://localhost:9001
       fail-fast: true
 
 management.security.enabled: false
-
