--- a/api-author.yml
+++ b/api-author.yml
@@ -3,3 +3,10 @@ server.port: 9010
 spring:
   application:
     name: api-author
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:9002/eureka/
+  instance:
+      preferIpAddress: true
