--- a/service-config/src/main/resources/application.yml
+++ b/service-config/src/main/resources/application.yml
@@ -1,2 +1,8 @@
 server.port: 9001
-spring.cloud.config.server.git.uri: ${HOME}/work/cloud-example
+spring:
+  cloud:
+    config:
+      server:
+        git:
+          uri: ${HOME}/work/cloud-example
+#eureka.client.serviceUrl.defaultZone: http://localhost:9002/eureka/
